style: Fix bottom spacing on projects page mobile view
- Remove dates from project entries

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,10 +24,6 @@ body {
   background-color: var(--white);
 }
 
-article {
-  padding-bottom: 1em;
-}
-
 h1, h2, h3, h4, h5, h6 {
   color: var(--primary-color);
   font-family: var(--font-heading), sans-serif;
