--- a/src/app/projects/styles.module.css
+++ b/src/app/projects/styles.module.css
@@ -15,3 +15,7 @@
   margin: 1em 10%;
   position: relative;
 }
+
+.spacer {
+  height: 6em;
+}
